--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background: #eeeeee url(../images/tree_bark.png);
+}
+
 h1 {
     font-size: 24px;
 }
@@ -18,10 +22,47 @@ h1, h2, h3 {
     font-weight: bold;
 }
 
-.teal {
-    color: white;
+.middleContent {
+    width: 960px;
+    margin: auto;
+}
+
+.navbar .middleContent .navbar-brand,
+.navbar .middleContent .navbar-brand:hover,
+.navbar .middleContent .navbar-brand:active {
     font-family: 'Georgia', Times, Times New Roman, serif;
-    background-color: #4aaaa5;
+    background-color: #4aaaaf;
+    color: white;
+    padding: 0 2em;
+    line-height: 50px;
+    font-size: 28px;
+}
+
+.middleContent .navbar-default {
+    margin-bottom: 0;
+    border: 0;
+    background: white none;
+}
+
+.middleContent .navbar-default .navbar-header {
+    height: 64px;
+}
+
+.middleContent .navbar-default .navbar-collapse {
+    border: 0;
+}
+
+.teal {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    background-color: #4aaaa5 !important;
+}
+
+.teal a {
+    color: white;
+}
+
+.teal .navbar-brand {
+    color: white;
 }
 
 .headerContent {
@@ -101,6 +142,7 @@ p {
 .project {
     position: relative;
     margin-bottom: 20px;
+    width
 }
 
 .portfolio a:nth-child(even) .project {
@@ -122,7 +164,6 @@ p {
 }
 
 .project img {
-    width: 297px;
     min-height: 223px;
 }
 
@@ -164,27 +205,10 @@ p {
     /*padding: 16px 32px;*/
 /*}*/
 
-.contact {
-    width: 238px;
-    float: right;
-}
-
-.contact img {
+.connect img {
     width: 70px;
     margin-right: 8px;
 }
-
-.contact a:last-child img {
-    margin-right: 0;
-}
-
-/*.clearfix {*/
-    /*width: 100%;*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-    /*height: 0;*/
-    /*clear: both;*/
-/*}*/
 
 .footer {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -194,19 +218,4 @@ p {
     line-height: 80px;
     font-size: 12px;
     text-align: center;
-}
-
-.mainBodyArea {
-    background: #eeeeee url(../images/tree_bark.png);
-    border-top: 1px solid #666666;
-}
-
-.mainBodyContent {
-    width: 960px;
-    margin: auto;
-}
-
-.mainBodyContent > div {
-    background-color: white;
-    border: 1px solid #dddddd;
 }
